# RBMonGPU

./: .gitignore  CMakeLists.txt  Readme.md  auto_rsync_pks.sh  setup.py
include/: Array.hpp  RNGStates.hpp  Spins.h  cuda_complex.hpp  cuda_kernel_defines.h  quantum_states.hpp  random.h  spin_ensembles.hpp  types.h  utils.kernel  zMinResQLP.h
include/extra/: RenyiDoubleSum.hpp
include/network_functions/: DiagDensityOp.hpp  DifferentiatePsi.hpp  ExpectationValue.hpp  HilbertSpaceDistance.hpp  HilbertSpaceDistanceV2.hpp  KullbackLeibler.hpp  PsiAngles.hpp  PsiNorm.hpp  PsiOkVector.hpp  PsiVector.hpp  RenyiCorrelation.hpp  RenyiEntropy.hpp  S_matrix.hpp  Subspace.hpp
include/operator/: MatrixElement.hpp  Operator.hpp  UnitaryChain.hpp
include/quantum_state/: Psi.hpp  PsiBase.hpp  PsiCache.hpp  PsiClassical.hpp  PsiClassicalHelper.hpp  PsiDeep.hpp  PsiDeepCache.hpp  PsiDeepMin.hpp  PsiDynamical.hpp  PsiDynamicalCache.hpp  PsiExact.hpp  PsiHamiltonian.hpp  PsiHistory.hpp  PsiPair.hpp  PsiW3.hpp  PsiW3Cache.hpp  psi_functions.hpp
include/spin_ensembles/: ExactSummation.hpp  MonteCarloLoop.hpp  SpecialExactSummation.hpp  SpecialMonteCarloLoop.hpp  SpinHistory.hpp
pyRBMonGPU/: L2Regularization.py  LearningByGradientDescent.py  PsiDeep.py  __init__.py  main.cpp  new_neural_network.py
python-bindings/: CMakeLists.txt  setup.py
python-bindings/pyRBMonGPU/: L2Regularization.py  LearningByGradientDescent.py  NeuralNetwork.py  NeuralNetworkGD.py  NeuralNetworkSR.py  NeuralNetworkW3.py  Psi.py  PsiDeep.py  PsiDynamical.py  PsiPair.py  SpinConstraint.py  __init__.py  fresh_neural_network.py  gradient_descent.py  json_operator.py  main.cpp  new_neural_network.py
source/: Array.cu  RBMonGPU.cu  RNGStates.cu  main.cpp
source/extra/: RenyiDoubleSum.cu
source/network_functions/: DiagDensityOp.cu  DifferentiatePsi.cu  ExpectationValue.cu  HilbertSpaceDistance.cu  HilbertSpaceDistanceV2.cu  HilbertSpaceDistance_2nd_order.cu  HilbertSpaceDistance_PsiPair.cu  KullbackLeibler.cu  PsiAngles.cu  PsiNorm.cu  PsiOkVector.cu  PsiVector.cu  RenyiCorrelation.cu  S_matrix.cu  Subspace.cu
source/operator/: Operator.cpp  Operator.cu  UnitaryChain.cpp
source/quantum_state/: Psi.cu  PsiClassicalHelper.cpp  PsiDeep.cu  PsiDynamical.cu  PsiFree.cu  PsiHistory.cu  PsiPair.cu  PsiW3.cu
source/spin_ensembles/: ExactSummation.cu  MonteCarloLoop.cu  SpecialExactSummation.cu  SpecialMonteCarloLoop.cu  SpinHistory.cu
test/: conftest.py  make_Psi.py  make_PsiDynamical.py  make_PsiW3.py  test_HilbertSpaceDistance.py  test_Psi.py  test_PsiDeep.py  test_PsiDynamical.py  test_PsiPair.py  test_PsiW3.py
